added basic main view, list, id search

--- a/conference_room/conf_app/templates/base_html.html
+++ b/conference_room/conf_app/templates/base_html.html
@@ -8,8 +8,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/Dodac link">List of all Exclusive Rooms</a></li>
-            <li><a href="/Dodac link">Adding Rooms</a></li>
+                <li><a href="/room/list/">List of all Exclusive Rooms</a></li>
+<!--            <li><a href="/Dodac link">Adding Rooms</a></li>-->
         </ul>
     </nav>
     <div class="content">
