added three raw buttons_delete_add_book

--- a/conference_room/conf_app/templates/add_room.html
+++ b/conference_room/conf_app/templates/add_room.html
@@ -1,14 +1,23 @@
-{% extends 'base_html.html' %}
-{% block title %}List of Exclusive Rooms{% endblock %}
-{% block content %}
-<h1>Add more Rooms</h1>
-{% if rooms %}
-    <ul>
-        {% for room in rooms %}
-            <li><a href="{% url 'conf_app:list_of_rooms' %}">List of all Exclusive Rooms</a></li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>Sorry, there are no available Rooms</p>
-{% endif %}
-{% endblock %}
+        <html>
+            <body>
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    <label>
+                        Room Name:
+                        <input type="text" name="name"/>
+                    </label>
+                    <br>
+                    <label>
+                        Capacity:
+                        <input type="text" name="capacity"/>
+                    </label>
+                    <br>
+                    <input type="checkbox" id="myCheckbox" name="myCheckbox">
+                    <label for="myCheckbox">Projector</label>
+                    <br>
+                    <label>
+                        <input type="submit" value="Add Room"/>
+                    </label>
+                </form>
+            </body>
+        </html>
