--- a/conference_room/conf_app/templates/base_html.html
+++ b/conference_room/conf_app/templates/base_html.html
@@ -9,7 +9,7 @@
     <nav>
         <ul>
                 <li><a href="/room/list/">List of all Exclusive Rooms</a></li>
-<!--            <li><a href="/Dodac link">Adding Rooms</a></li>-->
+                <li><a href="/room/new/">Add Room</a></li>
         </ul>
     </nav>
     <div class="content">
