added deleting function

--- a/conference_room/conf_app/templates/add_room.html
+++ b/conference_room/conf_app/templates/add_room.html
@@ -2,6 +2,7 @@
             <body>
                 <form action="" method="POST">
                     {% csrf_token %}
+                    <h1>Adding Rooms:</h1>
                     <label>
                         Room Name:
                         <input type="text" name="name"/>
