--- a/conference_room/conf_app/templates/deleted_room.html
+++ b/conference_room/conf_app/templates/deleted_room.html
@@ -1,17 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Browser</title>
-</head>
-<body>
-  <h1>
-    Your Room has been correctly deleted!
-  </h1>
-  <p>
-    Thank you for your support!
-  </p>
-</body>
-</html>
+        <html>
+            <body>
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    <h1>Deleting Rooms:</h1>
+                    <label>
+                        Room Name:
+                        <input type="text" name="name"/>
+                    </label>
+                    <br>
+                    <label>
+                        Capacity:
+                        <input type="text" name="capacity"/>
+                    </label>
+                    <br>
+                    <input type="checkbox" id="myCheckbox" name="myCheckbox">
+                    <label for="myCheckbox">Projector</label>
+                    <br>
+                    <label>
+                        <input type="submit" value="Add Room"/>
+                    </label>
+                </form>
+            </body>
+        </html>
