added modify function

--- a/conference_room/conf_app/templates/deleted_room.html
+++ b/conference_room/conf_app/templates/deleted_room.html
@@ -2,7 +2,7 @@
             <body>
                 <form action="" method="POST">
                     {% csrf_token %}
-                    <h1>Deleting Rooms:</h1>
+                    <h1>Delete Rooms:</h1>
                     <label>
                         Room Name:
                         <input type="text" name="name"/>
