--- a/conference_room/conf_app/templates/edit_room.html
+++ b/conference_room/conf_app/templates/edit_room.html
@@ -2,7 +2,7 @@
             <body>
                 <form action="" method="POST">
                     {% csrf_token %}
-                    <h1>Add Rooms:</h1>
+                    <h1>Edit Rooms:</h1>
                     <label>
                         Room Name:
                         <input type="text" name="name"/>
@@ -17,7 +17,7 @@
                     <label for="myCheckbox">Projector</label>
                     <br>
                     <label>
-                        <input type="submit" value="Add Room"/>
+                        <input type="submit" value="Edit Room"/>
                     </label>
                 </form>
             </body>
