--- a/conference_room/conf_app/templates/base_html.html
+++ b/conference_room/conf_app/templates/base_html.html
@@ -1,15 +1,58 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} Title of the Page {% endblock %}</title>
+    <title>{% block title %}Room Booking System{% endblock %}</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: navy;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #f2f2f2;
+        }
+        nav li {
+            float: left;
+        }
+        nav li a {
+            display: block;
+            color: #333;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        nav li a:hover {
+            background-color: #ddd;
+        }
+        .content {
+            padding: 2em;
+        }
+        footer {
+            text-align: center;
+            padding: 1em 0;
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Room Booking System</h1>
+    </header>
     <nav>
         <ul>
-                <li><a href="/room/list/">List of all Exclusive Rooms</a></li>
-                <li><a href="/room/new/">Add Room</a></li>
+            <li><a href="/room/list/">List of all Exclusive Rooms</a></li>
+            <li><a href="/room/new/">Add Room</a></li>
         </ul>
     </nav>
     <div class="content">
