--- a/conference_room/conf_app/templates/add_room.html
+++ b/conference_room/conf_app/templates/add_room.html
@@ -1,24 +1,27 @@
-        <html>
-            <body>
-                <form action="" method="POST">
-                    {% csrf_token %}
-                    <h1>Add Rooms:</h1>
-                    <label>
-                        Room Name:
-                        <input type="text" name="name"/>
-                    </label>
-                    <br>
-                    <label>
-                        Capacity:
-                        <input type="text" name="capacity"/>
-                    </label>
-                    <br>
-                    <input type="checkbox" id="myCheckbox" name="myCheckbox">
-                    <label for="myCheckbox">Projector</label>
-                    <br>
-                    <label>
-                        <input type="submit" value="Add Room"/>
-                    </label>
-                </form>
-            </body>
-        </html>
+{% extends "base_html.html" %}
+{% block title %}
+    Add Room - Room Booking System
+{% endblock %}
+{% block content %}
+        <form action="" method="POST">
+            {% csrf_token %}
+            <h1>Add Rooms:</h1>
+                <label>
+                    Room Name:
+                    <input type="text" name="name"/>
+                </label>
+                <br>
+                <label>
+                    Capacity:
+                    <input type="text" name="capacity"/>
+                </label>
+                <br>
+                <input type="checkbox" id="myCheckbox" name="myCheckbox">
+                <label for="myCheckbox">Projector</label>
+                <br>
+                <label>
+                    <input type="submit" value="Add Room"/>
+                </label>
+        </form>
+    </body>
+{% endblock %}
