room_detail html update

--- a/conference_room/conf_app/templates/room_detail.html
+++ b/conference_room/conf_app/templates/room_detail.html
@@ -1,3 +1,8 @@
+{% extends "base_html.html" %}
+{% block title %}
+    Room Details
+{% endblock %}
+{% block content %}
 <html>
 <head>
     <title>Room Details</title>
@@ -27,3 +32,4 @@
     </ul>
 </body>
 </html>
+{% endblock %}
