--- a/conference_room/conf_app/templates/edit_room.html
+++ b/conference_room/conf_app/templates/edit_room.html
@@ -1,24 +1,25 @@
-        <html>
-            <body>
-                <form action="" method="POST">
-                    {% csrf_token %}
-                    <h1>Edit Rooms:</h1>
-                    <label>
-                        Room Name:
-                        <input type="text" name="name"/>
-                    </label>
-                    <br>
-                    <label>
-                        Capacity:
-                        <input type="text" name="capacity"/>
-                    </label>
-                    <br>
-                    <input type="checkbox" id="myCheckbox" name="myCheckbox">
-                    <label for="myCheckbox">Projector</label>
-                    <br>
-                    <label>
-                        <input type="submit" value="Edit Room"/>
-                    </label>
-                </form>
-            </body>
-        </html>
+{% extends "base_html.html" %}
+{% block content %}
+    <body>
+        <form action="" method="POST">
+            {% csrf_token %}
+            <h1>Edit Rooms:</h1>
+            <label>
+                Room Name:
+                <input type="text" name="name"/>
+            </label>
+            <br>
+            <label>
+                Capacity:
+                <input type="text" name="capacity"/>
+            </label>
+            <br>
+            <input type="checkbox" id="myCheckbox" name="myCheckbox">
+            <label for="myCheckbox">Projector</label>
+            <br>
+            <label>
+                <input type="submit" value="Edit Room"/>
+            </label>
+        </form>
+    </body>
+{% endblock %}
