--- a/conference_room/conf_app/templates/listed_rooms.html
+++ b/conference_room/conf_app/templates/listed_rooms.html
@@ -5,12 +5,14 @@
             <th>Name</th>
             <th>Capacity</th>
             <th>Projector</th>
+            <th>Availability</th>
         </tr>
         {% for room in rooms %}
             <tr>
                 <td><a href="/room/search/{{ room.id }}/">{{ room.name }}</a></td>
                 <td>{{ room.capacity }}</td>
-                <td>{% if room.projector %}Tak{% else %}Nie{% endif %}</td>
+                <td>{% if room.projector %}Yes{% else %}No{% endif %}</td>
+                <td>{% if room.availability %}Yes{% else %}No{% endif %}</td>
                 <td><a href="/room/edit/{{ room.id }}/">Edit</a></td>
                 <td><a href="/room/delete/{{ room.id }}/">Delete</a></td>
                 <td><a href="/room/book/{{ room.id }}/">Book</a></td>
