--- a/conference_room/conf_app/templates/room_detail.html
+++ b/conference_room/conf_app/templates/room_detail.html
@@ -6,13 +6,13 @@
 </head>
 <body>
     <h1>Room Details</h1>
-    <p>Name: {{ rooms.name }}</p>
-    <p>Capacity: {{ rooms.capacity }}</p>
-    <p>Projector available: {% if rooms.projector %}Yes{% else %}No{% endif %}</p>
-    <p>Availability: {{ availability }}</p>
-    <h2>Future Bookings:</h2>
+    <p>Name: {{ room.name }}</p>
+    <p>Capacity: {{ room.capacity }}</p>
+    <p>Projector available: {% if room.projector %}Yes{% else %}No{% endif %}</p>
+    <p>Availability: {% if availability == 'Yes' %}Available{% else %}Not Available{% endif %}</p>
+    <h1>Future Bookings:</h1>
     <ul>
-        {% for booking in future_bookings %}
+        {% for booking in future_bookings.all %}
             <li>
                 Date: {{ booking.book_date }}<br>
                 Comment: {{ booking.comment }}<br>
@@ -21,11 +21,11 @@
             <li>No future bookings.</li>
         {% endfor %}
     </ul>
-    <h2>Actions:</h2>
+    <h1>Actions:</h1>
     <ul>
-        <li><a href="/room/edit/{{ rooms.id }}/">Edit Room</a></li>
-        <li><a href="/room/delete/{{ rooms.id }}/">Delete Room</a></li>
-        <li><a href="/room/book/{{ rooms.id }}/">Book Room</a></li>
+        <li><a href="/room/edit/{{ room.id }}/">Edit Room</a></li>
+        <li><a href="/room/delete/{{ room.id }}/">Delete Room</a></li>
+        <li><a href="/room/book/{{ room.id }}/">Book Room</a></li>
     </ul>
 </body>
 </html>
